application-gateway/network.tf
# TODO: define subnets in-line within the network resource
resource "azurerm_virtual_network" "demo-virtual-network" {
  name                = "${var.prefix}-network"
  location            = azurerm_resource_group.demo.location
  resource_group_name = azurerm_resource_group.demo.name
  address_space       = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "demo-subnet-1" {
  name                 = "${var.prefix}-internal-1"
  resource_group_name  = azurerm_resource_group.demo.name
  virtual_network_name = azurerm_virtual_network.demo-virtual-network.name
  address_prefixes     = ["10.0.0.0/24"]
}

resource "azurerm_subnet" "demo-subnet-2" {
  name                 = "${var.prefix}-internal-2"
  resource_group_name  = azurerm_resource_group.demo.name
  virtual_network_name = azurerm_virtual_network.demo-virtual-network.name
  address_prefixes     = ["10.0.2.0/24"]
}


resource "azurerm_network_security_group" "allow-ssh" {
    name                = "demo-instance-nsg"
    location            = var.location
    resource_group_name = azurerm_resource_group.demo.name

    security_rule {
        name                       = "HTTP"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "80"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "SSH"
        priority                   = 1002
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = var.ssh-source-address
        destination_address_prefix = "*"
    }
}

resource "azurerm_subnet_network_security_group_association" "nsg_assoc-1" {
  subnet_id                 = azurerm_subnet.demo-subnet-1.id
  network_security_group_id = azurerm_network_security_group.allow-ssh.id
}
